<resources>
    <string name="app_name">AppShopping</string>

    // Login Screen, Register Screen
    <string name="app_title">Shop Shop</string>
    <string name="description_login">Login now to get new products</string>
    <string name="forgot_password">Forgot password</string>
    <string name="login">Login</string>
    <string name="navigate_to_register">Don\'t have an account? Register</string>
    <string name="register_description">Register to start your journey!</string>
    <string name="navigate_to_login">Have an account? Login</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmed_password">Confirmed password</string>
    <string name="email_hint">example@gmail.com</string>
    <string name="password_hint">**********</string>
    <string name="full_name_hint">Shop Shop</string>
    <string name="register">Register</string>

    // Forgot Password Screen
    <string name="description_forgot_password">Enter your registered email below to receive password reset instruction.</string>
    <string name="send">Send</string>z
    <string name="forgot_password_navigate_to_login">Back to login</string>

    // Check Email Screen
    <string name="title_check_email">Check your email</string>
    <string name="description_check_email">We have sent password recovery instruction to your email.</string>
    <string name="confirm_check">Back</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="user_info">User info</string>
    <string name="user">User</string>
    <string name="logout">Logout</string>

    // User Info Screen
    <string name="name">Name</string>
    <string name="setup">Setup</string>
    <string name="gender">Gender</string>
    <string name="account_balance">Account balance</string>
    <string name="change_name">Change name</string>
    <string name="change_name_desc">Enter your new name</string>
    <string name="hint_text_change_name">Your name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="change">Change</string>
    <string name="change_password">Change password</string>
    <string name="new_password">New password</string>
    <string name="change_password_desc">Enter your new pass word</string>

    <string name="log_out_desc">Are you sure you want to logout?</string>
    <string name="log_out_title">Confirm logout</string>
    <string name="buy_now">Buy now</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="introduce">Introduce</string>
    <string name="change_success">Change success</string>
    <string name="about">About</string>
    <string name="support">Support</string>
    <string name="screen_mode">Light/Dark mode</string>
    <string name="language">Language</string>

    <string name="english_language_mode" translatable="false">English(United Kingdom)</string>
    <string name="vietnamese_language_mode" translatable="false">Tiếng Việt (Việt Nam)</string>
    <string name="new_product">New product</string>
    <string name="see_all"><![CDATA[See all >]]></string>

    <string name="contact">Contact: 0972533708\n
    Website: https:clean.com</string>

    <string name="all">All</string>
    <string name="device">Device</string>
    <string name="fashion">Fashion</string>
    <string name="pay">Pay</string>
    <string name="price" translatable="false">%1$s$</string>
    <string name="total_price">Total price: \n %1$s$</string>

    <string name="cart">Cart</string>
    <string name="delivery">Delivery</string>
    <string name="wait_confirm">Wait for confirm</string>
    <string name="empty_list_status">There are currently no products</string>

    <string name="confirmation_desc">Wait for confirmation</string>
    <string name="delivery_desc">Being transported</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="confirm_delete_desc">Are you sure to remove this product from your cart</string>
    <string name="remove">Remove</string>
    <string name="dark_mode">Dark mode</string>
    <string name="loading_data">Loading data...</string>

</resources>