<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:background="@drawable/bg_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvDialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog_header"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/gender"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />


        <TextView
            android:id="@+id/tvMale"
            android:text="@string/male"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:paddingVertical="@dimen/small_margin"
            android:paddingHorizontal="@dimen/small_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />


        <TextView
            android:id="@+id/tvFeMale"
            android:text="@string/female"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:paddingVertical="@dimen/small_margin"
            android:paddingHorizontal="@dimen/small_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />


        <TextView
            android:id="@+id/tvOther"
            android:text="@string/other"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:paddingVertical="@dimen/small_margin"
            android:paddingHorizontal="@dimen/small_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />





    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>