<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog">

        <TextView
            android:id="@+id/tvRemoveTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog_header"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/confirm_delete"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvRemoveDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/regular_margin"
            android:layout_marginTop="@dimen/regular_margin"
            android:gravity="center"
            android:text="@string/confirm_delete_desc"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRemoveTitle" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnConfirmRemove"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/small_margin"
            android:layout_marginTop="@dimen/regular_margin"
            android:layout_marginBottom="@dimen/regular_margin"
            android:background="@drawable/bg_button_save"
            android:text="@string/remove"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnCancel"
            app:layout_constraintTop_toBottomOf="@id/tvRemoveDesc" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/small_margin"
            android:layout_marginTop="@dimen/regular_margin"
            android:background="@drawable/bg_button_cancel"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@id/btnConfirmRemove"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRemoveDesc" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>