<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog">

        <TextView
            android:id="@+id/tvDialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog_header"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/change_name"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDialogDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/regular_margin"
            android:layout_marginTop="@dimen/regular_margin"
            android:gravity="center"
            android:text="@string/change_name_desc"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDialogTitle" />

        <include
            android:id="@+id/inputName"
            layout="@layout/layout_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/regular_margin"
            android:layout_marginTop="@dimen/regular_margin"
            app:inputHint="@{@string/hint_text_change_name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDialogDesc" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginBottom="@dimen/regular_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/small_margin"
            android:layout_marginTop="@dimen/regular_margin"
            android:background="@drawable/bg_button_save"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnCancel"
            app:layout_constraintTop_toBottomOf="@id/inputName" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/small_margin"
            android:layout_marginTop="@dimen/regular_margin"
            android:background="@drawable/bg_button_cancel"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@id/btnSave"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputName" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>