<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/layoutIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".2">

            <ImageView
                android:layout_width="135dp"
                android:layout_height="135dp"
                android:src="@drawable/bg_image_icon" />

            <ImageView
                android:id="@+id/ivEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_email" />

        </FrameLayout>

        <TextView
            android:id="@+id/tvCheckEmailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_margin3"
            android:text="@string/title_check_email"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutIcon" />

        <TextView
            android:id="@+id/tvCheckEmailDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/regular_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/regular_margin"
            android:gravity="center"
            android:text="@string/description_check_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCheckEmailTitle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="@dimen/regular_margin"
            android:layout_marginTop="@dimen/big_margin3"
            android:layout_marginEnd="@dimen/regular_margin"
            android:background="@drawable/bg_button"
            android:text="@string/confirm_check"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCheckEmailDesc" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>