<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/bg_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvDialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog_header"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDialogDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/regular_margin"
            android:layout_marginTop="@dimen/regular_margin"
            android:gravity="center"
            android:text="@string/change_password_desc"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDialogTitle" />

        <include
            android:id="@+id/inputPassword"
            layout="@layout/layout_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/regular_margin"
            android:layout_marginTop="@dimen/regular_margin"
            app:title="@{@string/password}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDialogDesc" />

        <include
            android:id="@+id/inputNewPassword"
            layout="@layout/layout_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/regular_margin"
            android:layout_marginTop="@dimen/regular_margin"
            app:title="@{@string/new_password}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputPassword" />

        <include
            android:id="@+id/inputConfirmedPassword"
            layout="@layout/layout_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/regular_margin"
            android:layout_marginTop="@dimen/regular_margin"
            app:title="@{@string/confirmed_password}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputNewPassword" />

        <TextView
            android:layout_marginTop="@dimen/small_margin"
            android:visibility="gone"
            android:textColor="@color/danger_main"
            app:layout_constraintTop_toBottomOf="@id/inputConfirmedPassword"
            android:layout_marginHorizontal="@dimen/regular_margin"
            android:id="@+id/tvError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginBottom="@dimen/regular_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/btnChange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/small_margin"
            android:layout_marginTop="@dimen/regular_margin"
            android:background="@drawable/bg_button_save"
            android:text="@string/change"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnCancel"
            app:layout_constraintTop_toBottomOf="@id/tvError" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/small_margin"
            android:layout_marginTop="@dimen/regular_margin"
            android:background="@drawable/bg_button_cancel"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@id/btnChange"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvError" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>